# axon

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  rust-toolchain.toml
benches/: README.md  core_bench.rs  impact_bench.rs  phase4_bench.rs  rl_bench.rs
crates/axon-backtest/: Cargo.toml
crates/axon-backtest/config/: default_impact.toml
crates/axon-backtest/src/: engine.rs  lib.rs
crates/axon-backtest/src/impact/: config.rs  impacted_engine.rs  mod.rs  python.rs
crates/axon-backtest/src/matching/: engine.rs  error.rs  l2.rs  mod.rs  types.rs
crates/axon-backtest/src/matching/l3/: auction.rs  dark_pool.rs  engine_l3.rs  error.rs  mod.rs  types.rs
crates/axon-backtest/tests/: impact_breakdown.rs
crates/axon-cli/: Cargo.toml
crates/axon-cli/src/: main.rs
crates/axon-compliance/: Cargo.toml
crates/axon-compliance/src/: error.rs  lib.rs  types.rs
crates/axon-compliance/src/audit/: log.rs  mod.rs  storage.rs
crates/axon-compliance/src/python/: mod.rs
crates/axon-compliance/src/regulator/: metrics.rs  mod.rs  submission.rs
crates/axon-compliance/src/report/: annual.rs  daily.rs  formatter.rs  mod.rs  monthly.rs
crates/axon-compliance/tests/: integration_test.rs
crates/axon-core/: Cargo.toml
crates/axon-core/src/: error.rs  lib.rs
crates/axon-core/src/event/: builder.rs  error.rs  fill.rs  handler.rs  market.rs  mod.rs  order.rs  router.rs  system.rs  types.rs
crates/axon-core/src/fee/: error.rs  mod.rs  model.rs  role.rs  table.rs  types.rs
crates/axon-core/src/impact/: adaptive.rs  almgren_chriss.rs  error.rs  linear.rs  mod.rs  power_law.rs  traits.rs  types.rs
crates/axon-core/src/latency/: composite.rs  constant.rs  error.rs  exponential.rs  factory.rs  mod.rs  normal.rs  queue.rs  traits.rs  uniform.rs
crates/axon-core/src/market/: bar.rs  error.rs  mod.rs  orderbook.rs  side.rs  tick.rs  trade.rs
crates/axon-core/src/order/: core.rs  error.rs  mod.rs  status.rs  tif.rs  types.rs
crates/axon-core/src/portfolio/: core.rs  currency.rs  error.rs  mod.rs  position.rs  snapshot.rs  trade_record.rs
crates/axon-core/src/queue/: error.rs  event_queue.rs  mod.rs  mode.rs  queued_event.rs  stats.rs
crates/axon-core/src/scheduler/: callback.rs  clock.rs  context.rs  core.rs  error.rs  mod.rs  task.rs
crates/axon-core/src/simd/: mod.rs  normalize.rs  orderbook.rs  var.rs
crates/axon-core/src/time/: mod.rs  monotonic.rs  precision.rs  timestamp.rs
crates/axon-core/src/types/: mod.rs  price.rs  quantity.rs  symbol.rs
crates/axon-core/src/volatility/: error.rs  estimator.rs  ewma.rs  garman_klass.rs  mod.rs  rolling.rs
crates/axon-data/: Cargo.toml
crates/axon-data/benches/: axon_data_bench.rs
crates/axon-data/proptest-regressions/: fuzz.txt
crates/axon-data/src/: dataset.rs  error.rs  fuzz.rs  lib.rs  pipeline.rs  service.rs  traits.rs  types.rs
crates/axon-data/src/bar/: bar_dataset.rs  mod.rs
crates/axon-data/src/cache/: mmap.rs  mod.rs  shared_memory.rs
crates/axon-data/src/ipc/: mod.rs
crates/axon-data/src/sources/: csv.rs  mock.rs  mod.rs  parquet.rs
crates/axon-data/tests/: integration_test.rs
crates/axon-data/tests/fixtures/: generate_sample.py  sample_bad_schema.parquet  sample_bad_type.parquet  sample_basic.csv  sample_basic.parquet  sample_custom_cols.csv  sample_malformed.csv
crates/axon-llm/: CHANGELOG.md  Cargo.toml
crates/axon-llm/docs/: e2e-testing.md  recording.md
crates/axon-llm/examples/: live_trading_demo.rs
crates/axon-llm/scripts/: record-fixtures.sh
crates/axon-llm/src/: agent.rs  backend.rs  context.rs  lib.rs  prompt.rs  react_agent.rs  tools.rs  types.rs
crates/axon-llm/src/backends/: cost.rs  mock.rs  mod.rs  openai_compat.rs  recording.rs  retry.rs  streaming.rs
crates/axon-llm/src/explain/: bridge.rs  mod.rs  recorder.rs  store.rs  tools.rs  types.rs
crates/axon-llm/tests/: agent_config_test.rs  backend_test.rs  common_tools.rs  compute_explanation_tool_test.rs  context_test.rs  decision_record_test.rs  decision_recorder_test.rs  e2e_common_smoke_test.rs  e2e_explain_e2e_test.rs  e2e_react_loop_test.rs  e2e_simple_chat_test.rs  e2e_tool_calling_test.rs  explain_integration_test.rs  explainer_bridge_test.rs  explanation_store_test.rs  prompt_test.rs  query_explanation_tool_test.rs  react_agent_test.rs  tools_integration_test.rs  tools_test.rs  types_test.rs
crates/axon-llm/tests/common/: mod.rs
crates/axon-llm/tests/e2e/common/fixtures/explain_e2e/deepseek-chat/: 0c403120ec58.json
crates/axon-llm/tests/e2e/common/fixtures/react_loop/deepseek-chat/: d27c67a510ac.json
crates/axon-llm/tests/e2e/common/fixtures/simple_chat/deepseek-chat/: b9d0dff0e795.json
crates/axon-registry/: Cargo.toml
crates/axon-registry/config/: default_registry.toml
crates/axon-registry/python/axon_registry/: __init__.py  registry.py  storage.py  types.py
crates/axon-registry/src/: error.rs  filter.rs  lib.rs  registry.rs  signature.rs  types.rs
crates/axon-registry/src/python/: mod.rs
crates/axon-registry/src/storage/: local.rs  mod.rs
crates/axon-rl/: Cargo.toml
crates/axon-rl/src/: lib.rs
crates/axon-rl/src/action/: converter.rs  error.rs  mod.rs  smoother.rs  state.rs  tests.rs  types.rs
crates/axon-rl/src/env/: action_decoder.rs  config.rs  error.rs  executor.rs  mod.rs  trading_env.rs  types.rs
crates/axon-rl/src/observation/: buffer.rs  error.rs  mod.rs  normalizer.rs  space.rs  tests.rs  types.rs
crates/axon-rl/src/python/: mod.rs  tests.rs
crates/axon-rl/src/reward/: error.rs  history.rs  mod.rs  multi_objective.rs  pnl.rs  scaled.rs  sharpe.rs
crates/axon-rl/src/vec_env/: tests.rs
crates/axon-tracker/: Cargo.toml
crates/axon-tracker/config/: default_tracker.toml
crates/axon-tracker/python/axon_tracker/: __init__.py  composite.py  local.py  memory.py  types.py
crates/axon-tracker/src/: config.rs  error.rs  lib.rs  retry.rs  tracker.rs  types.rs
crates/axon-tracker/src/backends/: local.rs  memory.rs  mlflow.rs  mod.rs  wandb.rs
crates/axon-tracker/src/python/: mod.rs
(+85 files in other folders)
