[package]
name = "axon-data"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
description = "AXON 数据服务：多源接入（CSV/WS）、特征管道、三级缓存（Phase 3 P2 骨架）"

[features]
default = []
# 启用 CSV 数据源（依赖 csv crate）
csv-source = ["dep:csv"]
# 启用 WebSocket 实时数据源
ws-source = ["dep:tokio-tungstenite"]
# 启用 Parquet 数据源(PR5:arrow 已是默认依赖,只需 dep:parquet)
parquet-source = ["dep:parquet"]

[dependencies]
# 序列化
serde = { workspace = true }
serde_json = { workspace = true }
# 错误
thiserror = { workspace = true }
# 时间
chrono = { workspace = true }
# UUID（dataset id）
uuid = { workspace = true }
# 哈希（checksum）
sha2 = { workspace = true }
hex = "0.4"
# 异步
async-trait = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "macros", "rt-multi-thread", "time"] }
# LRU 缓存(L1 cache 容量限制)
lru = "0.12"
# Stream trait(公开 API 需要 `Pin<Box<dyn Stream<...>>>`,so 默认启用)
futures-core = "0.3"
# `stream::iter` 用于实现 `CsvSource::stream`(futures-core 不含此 API)
# + `executor::block_on` 用于 tests
futures = { version = "0.3", default-features = false, features = ["std", "executor"] }
# 内部依赖
axon-core = { workspace = true }

# 可选数据源
csv = { version = "1.3", optional = true }
tokio-tungstenite = { version = "0.24", optional = true }
# 列式存储(PR5:Dataset 内部已用 Arrow RecordBatch,故 arrow 为默认依赖)
arrow = { workspace = true }
# Parquet 文件读写(可继续 feature-gate;ParquetSource 模块在 parquet-source feature 启用时使用)
parquet = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time"] }
# Criterion 基准测试框架
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "axon_data_bench"
harness = false
